master

* Removed deprecated `:hint_class` option
* Removed deprecated :group_by and :group_label options
* Removed deprecated `:error_class` option
* Removed deprecated `:find_options` option

2.3.0.rc2

* deprecate support for Rails < 3.2

2.3.0.rc

* Updated to support Rails 4
* Added custom HTML for the options within a checkboxes input group
* Changed the format of the `value` attribute on `datetime_picker` input to be compliant with the HTML standards
* Added `Formtastic::Helpers::FormHelper.field_error_proc=` for setting a custom proc
* Fixed checked state of checkboxes when the values are integers
* Fixed CSS to prevent numeric inputs with a `max` from stretching to full width
* Added support for `:labels => false` on time selects
* Improved documentation

2.2.1

* Rails 4 compatibilty updates
* corrected configuration template for i18n lookups, which default to true
* removed custom_inline_order from configuration and template (code was removed in 2.0)
* added documentation for button/action i18n keys
* other documentation improvements

2.2.0

* documentation improvements for generator

2.2.0.rc

* removed deprecated buttons DSL, ButtonHelper and commit_button helper
* deprecated the top-level :value option that is only used by HiddenInput
* deprecated :hint_class option (use global configuration)
* deprecated :error_class option (use global configuration)
* deprecated :group_by and :group_label (use :collection option with a HTML string generated by Rails' grouped_options_for_select())
* deprecated :find_options
* renamed TimeInput (:as => :time) to TimeSelectInput (:as => :time_select), aliased and deprecated TimeInput
* renamed DatetimeInput (:as => :datetime) to DatetimeSelectInput (:as => :datetime_select), aliased and deprecated DatetimeInput
* renamed DateInput (:as => :date) to TimeSelectInput (:as => :date_select), aliased and deprecated DateInput
* added DatePickerInput (:as => :date_picker) for HTML5 date inputs