@@ -31,12 +31,8 @@ module Formtastic
     class HiddenInput 
       include Base
       
-      # Override to include :value set directly from options hash. The :value set in :input_html 
-      # hash will be preferred over :value set directly in the options.
-      #
-      # @deprecated :value option
       def input_html_options
-        options.slice(:value).merge(super).merge(:required => nil).merge(:autofocus => nil)
+        super.merge(:required => nil).merge(:autofocus => nil)
       end
       
       def to_html
