@@ -12,7 +12,6 @@ describe 'hidden input' do
     with_deprecation_silenced do
       concat(semantic_form_for(@new_post) do |builder|
         concat(builder.input(:secret, :as => :hidden))
-        concat(builder.input(:author_id, :as => :hidden, :value => 99))
         concat(builder.input(:published, :as => :hidden, :input_html => {:value => true}))
         concat(builder.input(:reviewer, :as => :hidden, :input_html => {:class => 'new_post_reviewer', :id => 'new_post_reviewer'}))
         concat(builder.input(:author, :as => :hidden, :value => 'direct_value', :input_html => {:value => "formtastic_value"}))
@@ -35,11 +34,6 @@ describe 'hidden input' do
     output_buffer.should have_tag("form li input#post_secret[@type=\"hidden\"][@value=\"1\"]")
   end
   
-  it "should pass any explicitly specified value - using :value" do
-    output_buffer.should have_tag("form li input#post_author_id[@type=\"hidden\"][@value=\"99\"]")
-  end
-
-  # Handle Formtastic :input_html options for consistency.
   it "should pass any explicitly specified value - using :input_html options" do
     output_buffer.should have_tag("form li input#post_published[@type=\"hidden\"][@value=\"true\"]")
   end
